src/test/resources/failing/fail43.pnd
template Foo<X> {
    P(x) <- X.Q(x)
}
template Bar<Y> {
    Q(x) <- Y.P(x)
}

Foo<B> as F
Bar<F> as B
